css fix for image size in case of overflow

--- a/app/css/components/slotted-radio.styl
+++ b/app/css/components/slotted-radio.styl
@@ -37,14 +37,9 @@
     font-size: 18px;
   }
 
-  i svg {
+  i svg, i img {
     height: 22px;
     width: auto;
-  }
-
-  i img {
-    width: 100%;
-    height: 100%;
   }
 
   /* Content styles */
